--- a/index.html
+++ b/index.html
@@ -1,22 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive Follower</title>
-     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-</head>
-<body>
-    <header>
-       
+
+    <!-- Tailwind Css CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    <!-- google font -->
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap");
+    </style>
+
+    <!-- custom tailwindcss -->
+    <style type="text/tailwindcss">
+      @theme {
+        --color-clifford: #da373d;
+        --color-primary: #E95A08;
+        --color-secondary: #00000080;
+        --font-noto: "Noto Serif", serif;
+        --font-inter: font-family: "Inter", sans-serif;
+      }
+    </style>
+
+    <!-- Icon CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css"
+      integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <header class="md:w-[1140px] mx-auto">
+      <nav class="flex justify-between items-center p-7 md:p-0 mt-5">
+       <img class="w-[63px] h-[38px] md:w-[135px] md:h-[82px]" src="./assets/logo.png" alt="">
+
+       <ul class="flex gap-10">
+        <li><a class="hidden md:block font-semibold hover:text-primary" href="">Home</a></li>
+        <li><a class="hidden md:block text-secondary hover:text-primary" href="">Shop</a></li>
+        <li><a class="hidden md:block text-secondary hover:text-primary" href="">About Us</a></li>
+        <li><a class="md:text-base hover:text-primary" href=""><i class="ri-shopping-cart-2-line"></i> cart($56)</a></li>
+       </ul>
+      </nav>
     </header>
 
-    <main>
+    <main></main>
 
-    </main>
-
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
