--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
   </head>
   <body>
     <header class="md:w-[1140px] mx-auto">
-      <nav class="flex justify-between items-center p-7 md:p-0 mt-5">
+        <!-- Navbar -->
+      <nav class="flex justify-between items-center px-7 md:p-0 mt-5">
        <img class="w-[63px] h-[38px] md:w-[135px] md:h-[82px]" src="./assets/logo.png" alt="">
 
        <ul class="flex gap-10">
@@ -47,7 +48,21 @@
       </nav>
     </header>
 
-    <main></main>
+    <main class="md:w-[1140px] mx-auto">
+        <!-- Banner section  -->
+         <section class="flex flex-col-reverse md:flex md:flex-row md:justify-between md:mt-24">
+            <!-- article -->
+             <div class="p-4 mt-7 md:flex md:flex-col md:justify-end md:p-0">
+                <h1 class="font-noto font-bold text-2xl md:text-6xl">ALWAYS <span class="text-primary" >FRESH <br> FLOWERS</span></h1>
+             <p class="text-secondary mt-3 md:w-[470px]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+             </div>
+
+             <img src="./assets/hero-flower.png" alt="">
+             
+         </section>
+
+
+    </main>
 
     <footer></footer>
   </body>
