--- a/index.html
+++ b/index.html
@@ -15,12 +15,25 @@
 
     <!-- custom tailwindcss -->
     <style type="text/tailwindcss">
-      @theme {
-        --color-clifford: #da373d;
-        --color-primary: #E95A08;
-        --color-secondary: #00000080;
-        --font-noto: "Noto Serif", serif;
-        --font-inter: font-family: "Inter", sans-serif;
+          @theme {
+            --color-clifford: #da373d;
+            --color-primary: #E95A08;
+            --color-secondary: #00000080;
+            --font-noto: "Noto Serif", serif;
+            --font-inter: font-family: "Inter", sans-serif;
+          }
+
+           @keyframes spin-smooth {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+
+      .spin-smooth {
+        animation: spin-smooth 8s linear infinite;
       }
     </style>
 
@@ -35,111 +48,201 @@
   </head>
   <body>
     <header class="md:w-[1140px] mx-auto">
-        <!-- Navbar -->
+      <!-- Navbar -->
       <nav class="flex justify-between items-center px-7 md:p-0 mt-5">
-       <img class="w-[63px] h-[38px] md:w-[135px] md:h-[82px]" src="./assets/logo.png" alt="">
+        <img
+          class="w-[63px] h-[38px] md:w-[135px] md:h-[82px]"
+          src="./assets/logo.png"
+          alt=""
+        />
 
-       <ul class="flex gap-10">
-        <li><a class="hidden md:block font-semibold hover:text-primary" href="">Home</a></li>
-        <li><a class="hidden md:block text-secondary hover:text-primary" href="">Shop</a></li>
-        <li><a class="hidden md:block text-secondary hover:text-primary" href="">About Us</a></li>
-        <li><a class="md:text-base hover:text-primary" href=""><i class="ri-shopping-cart-2-line"></i> cart($56)</a></li>
-       </ul>
+        <ul class="flex gap-10">
+          <li>
+            <a class="hidden md:block font-semibold hover:text-primary" href=""
+              >Home</a
+            >
+          </li>
+          <li>
+            <a class="hidden md:block text-secondary hover:text-primary" href=""
+              >Shop</a
+            >
+          </li>
+          <li>
+            <a class="hidden md:block text-secondary hover:text-primary" href=""
+              >About Us</a
+            >
+          </li>
+          <li>
+            <a class="md:text-base hover:text-primary" href=""
+              ><i class="ri-shopping-cart-2-line"></i> cart($56)</a
+            >
+          </li>
+        </ul>
       </nav>
     </header>
 
     <main class="md:w-[1140px] mx-auto">
-        <!-- Banner section  -->
-         <section class="flex flex-col-reverse md:flex md:flex-row md:justify-between md:mt-24">
-            <!-- article -->
-             <div class="p-4 mt-7 md:flex md:flex-col md:justify-end md:p-0">
-                <h1 class="font-noto font-bold text-2xl md:text-6xl">ALWAYS <span class="text-primary" >FRESH <br> FLOWERS</span></h1>
-             <p class="text-secondary mt-3 md:w-[470px]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
-             </div>
+      <!-- Banner section  -->
+      <section
+        class="flex flex-col-reverse md:flex md:flex-row md:justify-between md:mt-24"
+      >
+        <!-- article -->
+        <div class="p-4 mt-7 md:flex md:flex-col md:justify-end md:p-0">
+          <h1 class="font-noto font-bold text-2xl md:text-6xl">
+            ALWAYS
+            <span class="text-primary"
+              >FRESH <br />
+              FLOWERS</span
+            >
+          </h1>
+          <p class="text-secondary mt-3 md:w-[470px]">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh flowers that are perfect for any occasion.
+          </p>
+        </div>
 
-             <img src="./assets/hero-flower.png" alt="">
-         </section>
+        <img src="./assets/hero-flower.png" alt="" />
+      </section>
 
-         <!-- Plants Section -->
-          <section class="p-5 mt-16">
-            <!-- content -->
-             <div class="text-center md:w-[600px] md:mx-auto">
-                <h1 class="font-noto text-2xl md:text-[50px] font-bold text-primary mb-5"> Our <span class="text-black">Plants</span></h1>
-                <p class="text-secondary mb-5  ">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
-             </div>
+      <!-- Plants Section -->
+      <section class="p-5 mt-16">
+        <!-- content -->
+        <div class="text-center md:w-[600px] md:mx-auto">
+          <h1
+            class="font-noto text-2xl md:text-[50px] font-bold text-primary mb-5"
+          >
+            Our <span class="text-black">Plants</span>
+          </h1>
+          <p class="text-secondary mb-5">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh.
+          </p>
+        </div>
 
-             <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
-                <!-- card layout -->
-                 <div>
-                    <img src="./assets/sample-flower-image.png" alt="">
-                    <div class="text-center my-5 font-semibold">
-                        <h1>Lily Blossom</h1>
-                    <p class="font-bold">20 USD</p>
-                    </div>
-                    <button class="bg-primary w-full py-3 text-white font-semibold">Add To Cart</button>
-                 </div>
-                 <div>
-                    <img src="./assets/sample-flower-image.png" alt="">
-                    <div class="text-center my-5 font-semibold">
-                        <h1>Lily Blossom</h1>
-                    <p class="font-bold">20 USD</p>
-                    </div>
-                    <button class="bg-primary w-full py-3 text-white font-semibold">Add To Cart</button>
-                 </div>
-                 <div>
-                    <img src="./assets/sample-flower-image.png" alt="">
-                    <div class="text-center my-5 font-semibold">
-                        <h1>Lily Blossom</h1>
-                    <p class="font-bold">20 USD</p>
-                    </div>
-                    <button class="bg-primary w-full py-3 text-white font-semibold">Add To Cart</button>
-                 </div>
-                 <div>
-                    <img src="./assets/sample-flower-image.png" alt="">
-                    <div class="text-center my-5 font-semibold">
-                        <h1>Lily Blossom</h1>
-                    <p class="font-bold">20 USD</p>
-                    </div>
-                    <button class="bg-primary w-full py-3 text-white font-semibold">Add To Cart</button>
-                 </div>
-                 <div>
-                    <img src="./assets/sample-flower-image.png" alt="">
-                    <div class="text-center my-5 font-semibold">
-                        <h1>Lily Blossom</h1>
-                    <p class="font-bold">20 USD</p>
-                    </div>
-                    <button class="bg-primary w-full py-3 text-white font-semibold">Add To Cart</button>
-                 </div>
-                 <div>
-                    <img src="./assets/sample-flower-image.png" alt="">
-                    <div class="text-center my-5 font-semibold">
-                        <h1>Lily Blossom</h1>
-                    <p class="font-bold">20 USD</p>
-                    </div>
-                    <button class="bg-primary w-full py-3 text-white font-semibold">Add To Cart</button>
-                 </div>
-                 <div>
-                    <img src="./assets/sample-flower-image.png" alt="">
-                    <div class="text-center my-5 font-semibold">
-                        <h1>Lily Blossom</h1>
-                    <p class="font-bold">20 USD</p>
-                    </div>
-                    <button class="bg-primary w-full py-3 text-white font-semibold">Add To Cart</button>
-                 </div>
-                 <div>
-                    <img src="./assets/sample-flower-image.png" alt="">
-                    <div class="text-center my-5 font-semibold">
-                        <h1>Lily Blossom</h1>
-                    <p class="font-bold">20 USD</p>
-                    </div>
-                    <button class="bg-primary w-full py-3 text-white font-semibold">Add To Cart</button>
-                 </div>
-                
-                
-             </div>
-          </section>
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+          <!-- card layout -->
+          <div>
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <div class="text-center my-5 font-semibold">
+              <h1>Lily Blossom</h1>
+              <p class="font-bold">20 USD</p>
+            </div>
+            <button class="bg-primary w-full py-3 text-white font-semibold">
+              Add To Cart
+            </button>
+          </div>
+          <div>
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <div class="text-center my-5 font-semibold">
+              <h1>Lily Blossom</h1>
+              <p class="font-bold">20 USD</p>
+            </div>
+            <button class="bg-primary w-full py-3 text-white font-semibold">
+              Add To Cart
+            </button>
+          </div>
+          <div>
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <div class="text-center my-5 font-semibold">
+              <h1>Lily Blossom</h1>
+              <p class="font-bold">20 USD</p>
+            </div>
+            <button class="bg-primary w-full py-3 text-white font-semibold">
+              Add To Cart
+            </button>
+          </div>
+          <div>
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <div class="text-center my-5 font-semibold">
+              <h1>Lily Blossom</h1>
+              <p class="font-bold">20 USD</p>
+            </div>
+            <button class="bg-primary w-full py-3 text-white font-semibold">
+              Add To Cart
+            </button>
+          </div>
+          <div>
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <div class="text-center my-5 font-semibold">
+              <h1>Lily Blossom</h1>
+              <p class="font-bold">20 USD</p>
+            </div>
+            <button class="bg-primary w-full py-3 text-white font-semibold">
+              Add To Cart
+            </button>
+          </div>
+          <div>
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <div class="text-center my-5 font-semibold">
+              <h1>Lily Blossom</h1>
+              <p class="font-bold">20 USD</p>
+            </div>
+            <button class="bg-primary w-full py-3 text-white font-semibold">
+              Add To Cart
+            </button>
+          </div>
+          <div>
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <div class="text-center my-5 font-semibold">
+              <h1>Lily Blossom</h1>
+              <p class="font-bold">20 USD</p>
+            </div>
+            <button class="bg-primary w-full py-3 text-white font-semibold">
+              Add To Cart
+            </button>
+          </div>
+          <div>
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <div class="text-center my-5 font-semibold">
+              <h1>Lily Blossom</h1>
+              <p class="font-bold">20 USD</p>
+            </div>
+            <button class="bg-primary w-full py-3 text-white font-semibold">
+              Add To Cart
+            </button>
+          </div>
+        </div>
+      </section>
 
+      <!-- Plants Lover Section -->
+      <section class="p-6 md:flex md:gap-14 md:pt-[210px] relative">
+        <!-- image -->
+        <div class="mt-3">
+          <img
+            class="w-full md:w-[540px]"
+            src="./assets/flower-store.png"
+            alt=""
+          />
+          <div class="hidden md:block absolute top-20 left-85 spin-smooth">
+            <img class="w-[286px]" src="./assets/trusted-badge.png" alt="" />
+          </div>
+        </div>
 
+        <div class="mt-5 md:w-[540px]">
+          <h1 class="font-noto font-bold text-2xl md:text-[50px]">
+            Flower & Plants Lover
+          </h1>
+          <ul class="list-disc p-3 px-5 text-secondary md:text-[22px]">
+            <li>
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+            <li class="mt-5">
+              Celebrate each day with handpicked flowers and plants. From
+              fragrant lilies to exotic varieties, our shop provides the perfect
+              gift for every occasion.
+            </li>
+            <li class="mt-5">
+              Fill your room with the scent of nature. Our colorful blooms are
+              carefully selected to add peace, warmth, and happiness to your
+              environment always.
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
