Add Footer section with logo and navigation links

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               <h1>Lily Blossom</h1>
               <p class="font-bold">20 USD</p>
             </div>
-            <button class="bg-primary w-full py-3 text-white font-semibold">
+            <button  onclick="alert('Ana Flower Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
               Add To Cart
             </button>
           </div>
@@ -140,7 +140,7 @@
               <h1>Lily Blossom</h1>
               <p class="font-bold">20 USD</p>
             </div>
-            <button class="bg-primary w-full py-3 text-white font-semibold">
+            <button onclick="alert('Ana Flower Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
               Add To Cart
             </button>
           </div>
@@ -150,7 +150,7 @@
               <h1>Lily Blossom</h1>
               <p class="font-bold">20 USD</p>
             </div>
-            <button class="bg-primary w-full py-3 text-white font-semibold">
+            <button onclick="alert('Ana Flower Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
               Add To Cart
             </button>
           </div>
@@ -160,7 +160,7 @@
               <h1>Lily Blossom</h1>
               <p class="font-bold">20 USD</p>
             </div>
-            <button class="bg-primary w-full py-3 text-white font-semibold">
+            <button onclick="alert('Ana Flower Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
               Add To Cart
             </button>
           </div>
@@ -170,7 +170,7 @@
               <h1>Lily Blossom</h1>
               <p class="font-bold">20 USD</p>
             </div>
-            <button class="bg-primary w-full py-3 text-white font-semibold">
+            <button onclick="alert('Ana Flower Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
               Add To Cart
             </button>
           </div>
@@ -180,7 +180,7 @@
               <h1>Lily Blossom</h1>
               <p class="font-bold">20 USD</p>
             </div>
-            <button class="bg-primary w-full py-3 text-white font-semibold">
+            <button onclick="alert('Ana Flower Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
               Add To Cart
             </button>
           </div>
@@ -190,7 +190,7 @@
               <h1>Lily Blossom</h1>
               <p class="font-bold">20 USD</p>
             </div>
-            <button class="bg-primary w-full py-3 text-white font-semibold">
+            <button onclick="alert('Ana Flower Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
               Add To Cart
             </button>
           </div>
@@ -200,7 +200,7 @@
               <h1>Lily Blossom</h1>
               <p class="font-bold">20 USD</p>
             </div>
-            <button class="bg-primary w-full py-3 text-white font-semibold">
+            <button onclick="alert('Ana Flower Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
               Add To Cart
             </button>
           </div>
@@ -328,16 +328,71 @@
       >
         <div class="flex justify-center items-center h-[276px] md:h-[533px]">
           <div class="text-white text-center">
-            <h1 class="font-noto text-[20px] font-bold md:text-[50px]">Join the colorful Bunch</h1>
+            <h1 class="font-noto text-[20px] font-bold md:text-[50px]">
+              Join the colorful Bunch
+            </h1>
             <div class="flex mt-5">
-              <input class="bg-white py-2 px-4 md:w-[664px] text-gray-600" type="email" name="" id="" placeholder="Write email" />
-              <button class="bg-primary py-2 px-4 md:w-[186px] font-semibold">Subscribe</button>
+              <input
+                class="bg-white py-2 px-4 md:w-[664px] text-gray-600"
+                type="email"
+                name=""
+                id=""
+                placeholder="Write email"
+              />
+              <button class="bg-primary py-2 px-4 md:w-[186px] font-semibold">
+                Subscribe
+              </button>
             </div>
           </div>
         </div>
       </section>
     </main>
 
-    <footer></footer>
+    <footer class="md:w-[1140px] mx-auto p-7 md:p-0 mt-8">
+      <div class="md:flex md:justify-between">
+        <div class="md:w-[250px]">
+          <img src="./assets/logo.png" alt="" />
+          <p class="text-secondary mt-3 md:text-[22px]">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop.
+          </p>
+        </div>
+
+        <div>
+          <ul class="my-5">
+            <li class="my-4"><a href="">Home</a></li>
+            <li class="my-4"><a href="">About Us</a></li>
+            <li class="my-4"><a href="">Blog</a></li>
+            <li class="my-4"><a href="">FAQ</a></li>
+            <li class="my-4"><a href="">Contact Us</a></li>
+          </ul>
+        </div>
+
+        <div>
+          <ul class="my-5">
+            <li class="my-4"><a href="">Features</a></li>
+            <li class="my-4"><a href="">Pricing</a></li>
+            <li class="my-4"><a href="">Privacy Policy</a></li>
+            <li class="my-4"><a href="">Terms of Service</a></li>
+            <li class="my-4"><a href="">Help Center</a></li>
+          </ul>
+        </div>
+        <div>
+          <div class="flex justify-star items-center gap-5">
+            <a href=""
+              ><img class="my-4" src="./assets/icon-linkedin.png" alt=""
+            /></a>
+            <a href=""
+              ><img class="my-4" src="./assets/icon-twitter.png" alt=""
+            /></a>
+            <a href=""
+              ><img class="my-4" src="./assets/icon-facebook.png" alt=""
+            /></a>
+            <a href=""><img src="./assets/icon-youtube.png" alt="" /></a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
   </body>
 </html>
