some issu fixed and same image are fixed

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     />
   </head>
 
-  <body>
+  <body class="bg-[#F5F8FF]">
     <header class="md:w-[1140px] mx-auto">
       <!-- Navbar -->
       <nav class="flex justify-between items-center px-7 md:p-0 mt-5">
@@ -135,72 +135,72 @@
             </button>
           </div>
           <div>
-            <img src="./assets/sample-flower-image.png" alt="" />
+            <img src="./assets/Miniature Rose-2.svg" alt="" />
             <div class="text-center my-5 font-semibold">
-              <h1>Lily Blossom</h1>
-              <p class="font-bold">20 USD</p>
+              <h1>Miniature Rose</h1>
+              <p class="font-bold">25 USD</p>
             </div>
-            <button onclick="alert('Ana Flower Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
+            <button onclick="alert('Miniature Rose Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
               Add To Cart
             </button>
           </div>
           <div>
-            <img src="./assets/sample-flower-image.png" alt="" />
+            <img src="./assets/Hibiscus plant-3.svg" alt="" />
             <div class="text-center my-5 font-semibold">
-              <h1>Lily Blossom</h1>
-              <p class="font-bold">20 USD</p>
+              <h1>Hibiscus</h1>
+              <p class="font-bold">30 USD</p>
             </div>
-            <button onclick="alert('Ana Flower Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
+            <button onclick="alert('Hibiscus Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
               Add To Cart
             </button>
           </div>
           <div>
-            <img src="./assets/sample-flower-image.png" alt="" />
+            <img src="./assets/Gerbera-4.svg" alt="" />
             <div class="text-center my-5 font-semibold">
-              <h1>Lily Blossom</h1>
+              <h1>Gerbera</h1>
               <p class="font-bold">20 USD</p>
             </div>
-            <button onclick="alert('Ana Flower Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
+            <button onclick="alert('Gerbera Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
               Add To Cart
             </button>
           </div>
           <div>
-            <img src="./assets/sample-flower-image.png" alt="" />
+            <img src="./assets/Chandni Plant Bonsai-5.svg" alt="" />
             <div class="text-center my-5 font-semibold">
-              <h1>Lily Blossom</h1>
-              <p class="font-bold">20 USD</p>
+              <h1>Chandni</h1>
+              <p class="font-bold">50 USD</p>
             </div>
-            <button onclick="alert('Ana Flower Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
+            <button onclick="alert('Chandni Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
               Add To Cart
             </button>
           </div>
           <div>
-            <img src="./assets/sample-flower-image.png" alt="" />
+            <img src="./assets/Butterfly Pea-6.svg" alt="" />
             <div class="text-center my-5 font-semibold">
-              <h1>Lily Blossom</h1>
-              <p class="font-bold">20 USD</p>
+              <h1>Butterfly Pea</h1>
+              <p class="font-bold">32 USD</p>
             </div>
-            <button onclick="alert('Ana Flower Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
+            <button onclick="alert('Butterfly Pea Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
               Add To Cart
             </button>
           </div>
           <div>
-            <img src="./assets/sample-flower-image.png" alt="" />
+            <img src="./assets/Bougainvillea (Dwarf variety)-7.svg" alt="" />
             <div class="text-center my-5 font-semibold">
-              <h1>Lily Blossom</h1>
-              <p class="font-bold">20 USD</p>
+              <h1>Bougainvillea</h1>
+              <p class="font-bold">26 USD</p>
             </div>
-            <button onclick="alert('Ana Flower Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
+            <button onclick="alert('Bougainvillea Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
               Add To Cart
             </button>
           </div>
           <div>
-            <img src="./assets/sample-flower-image.png" alt="" />
+            <img src="./assets/Petunia.svg" alt="" />
             <div class="text-center my-5 font-semibold">
-              <h1>Lily Blossom</h1>
+              <h1>Petunia</h1>
               <p class="font-bold">20 USD</p>
             </div>
-            <button onclick="alert('Ana Flower Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
+            <button onclick="alert('Petunia Added to Cart')" class="bg-primary w-full py-3 text-white font-semibold">
               Add To Cart
             </button>
           </div>
@@ -218,7 +218,7 @@
             src="./assets/flower-store.png"
             alt=""
           />
-          <div class="hidden md:block absolute top-20 left-85 spin-smooth">
+          <div class="hidden md:block absolute top-20 left-85 spin-smooth drop-shadow-2xl">
             <img class="w-[286px]" src="./assets/trusted-badge.png" alt="" />
           </div>
         </div>
